tests/fixtures/invalid/pow_none_bool_bytes.py
# Cannot call pow() with None, Bool, Bytes
x = pow(None, True, b"hello")
